--- a/src/cluster-layout.css
+++ b/src/cluster-layout.css
@@ -1,24 +1,46 @@
 html, body, body > svg, body > div {
- position: fixed;
- margin:0; padding:0; height:100%; width:100%; overflow:hidden;
+   position: fixed;
+   margin:0; padding:0; height:100%; width:100%; overflow:hidden;
 }
 body > div {
- pointer-events: none;
+   pointer-events: none;
 }
+
 svg circle, svg g text {
- cursor: move;
+   cursor: move;
 }
 svg line.link {
- cursor: move;
- stroke: silver;
- stroke-width: 75px;
- stroke-linecap: round;
+   cursor: move;
+   stroke: silver;
+   stroke-width: 75px;
+   stroke-linecap: round;
 }
 svg line.join {
- stroke: silver;
- stroke-width: 75px;
- stroke-linecap: round;
+   stroke: silver;
+   stroke-width: 75px;
+   stroke-linecap: round;
 }
 svg line.breaking {
- visibility: hidden;
+   visibility: hidden;
 }
+
+#control_div {
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+}
+
+#shuffle_button {
+    position: fixed;
+    text-align: center;
+    bottom: 5%;
+    height: 80px;
+    width: 200px;
+    font: 28px Cabin;
+    background-color: lightblue;
+    color: darkblue;
+    border-radius: 4px;
+    border-width: 0px;
+    pointer-events: all;
+}
+
