grid-layout-complete

--- a/src/grid-layout.css
+++ b/src/grid-layout.css
@@ -14,8 +14,10 @@ table td.student_name {
 table td {
     width: 38%;
     vertical-align: top;
-    border: 1px solid gray;
+    border: 1px solid #FBE9E7;
     padding: 2px 2px;
+    background: #444444; 
+    color: white; 
 }
 table th {
     font-weight: normal;
@@ -37,7 +39,7 @@ table td .fa.fa-grip:before {
     font-family: FontAwesome;
     font-size: 12px;
     content: "\f142 \202F \f142 \202F \f142";
-    color: gray;
+    color: white;
     padding-right: 10px;
 }
 
@@ -47,6 +49,8 @@ table td p {
     border-radius: 5px;
     padding: 3px 7px;
     margin: 1px 3px;
+    background: #0288D1; 
+    color: white;
 }
 
 table td p span:after {
@@ -62,3 +66,28 @@ table td textarea {
     width: 100%;
     font: 18px Cabin;
 }
+
+#groupem_button {
+    position: fixed;
+    text-align: center;
+    bottom: 5%;
+    height: 80px;
+    width: 200px;
+    font: 28px Cabin;
+    background-color: #0288D1;
+    color: white;    
+    border-radius: 4px;
+    border-width: 0px;
+    pointer-events: all;
+}
+
+#groupem_div {
+text-align:center;
+margin:auto;
+}
+
+#groupem_button:hover{
+
+    background-color: #01579B;
+}
+
