--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,8 @@
 
 body{
   margin: 0;
-  background: #FFCCBC; 
-  color:black;
+  background: #FBE9E7; 
+  color: #01579B;
   font-family: 'Cabin'; 
 }
 
