--- a/src/grid-layout.css
+++ b/src/grid-layout.css
@@ -79,17 +79,15 @@ margin:auto;
     height: 80px;
     width: 200px;
     font: 28px Cabin;
-    background-color: #0288D1;
+    background-color: #00838F;
     color: white;    
     border-radius: 4px;
     border-width: 0px;
     pointer-events: all;
 }
 
-
-
 #groupem_button:hover{
-
-    background-color: #01579B;
+    background-color: #84FFFF;
+    text: black;
 }
 
