--- a/src/grid-layout.css
+++ b/src/grid-layout.css
@@ -14,10 +14,10 @@ table td.student_name {
 table td {
     width: 38%;
     vertical-align: top;
-    border: 1px solid #FBE9E7 ;
+    border: 1px solid #444444 ;
     padding: 2px 2px;
-    background: #444444; 
-    color: white; 
+    background: #B2EBF2;
+    color: black;
 }
 table th {
     font-weight: normal;
@@ -49,7 +49,7 @@ table td p {
     border-radius: 5px;
     padding: 3px 7px;
     margin: 1px 3px;
-    background: #00838F; 
+    background: #00838F;
     color: white;
     white-space: nowrap;
 }
@@ -81,7 +81,7 @@ margin:auto;
     width: 200px;
     font: 28px Cabin;
     background-color: #00838F;
-    color: white;    
+    color: white;
     border-radius: 4px;
     border-width: 0px;
     pointer-events: all;
