--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -9,14 +9,14 @@ body{
   background: white; 
   color: #00838F;
   font-family: 'Cabin'; 
-  background-image: url('../images/school.png');
+  /*background-image: url('../images/school.png');*/
 }
 
 .content {
   width: 70%;
   height: 100%;
   float: left;
-  background-image: url('../images/school.png');
+  /*background-image: url('../images/school.png');*/
 }
 
 .sidebar{
@@ -28,10 +28,6 @@ body{
   
 }
 
-h1{
-  text-align: center; 
-  
-}
 #cssmenu {
   padding: 0;
   margin: 0;
