--- a/src/table-view.css
+++ b/src/table-view.css
@@ -3,14 +3,37 @@ body, html {
   width: 100%;
   height: 100%;
 }
+
+
 table {
     margin: auto;
     width: 60%;
     border-collapse: collapse;
 }
+
+#classname_row {
+    text-align: center;
+    align-content: center;
+    padding-bottom: 2%;
+    padding-top: 5%;
+}
+
+#classname_input {
+    font-size: 36px;
+    border-color: transparent;
+    font-color: blue;
+    font-weight: bold;
+    align-content: center;
+    text-align:center;
+    color: #00838F;
+}
+
+
+
 table td.student_name {
     width: 20%;
 }
+
 table td {
     width: 38%;
     vertical-align: top;
@@ -50,7 +73,7 @@ table td.remove:before {
 table td p .fa-grip:before {
     font-family: FontAwesome;
     font-size: 13px;
-    content: "\f142 \202F \f142 \202F \f142";
+    /*content: "\f142 \202F \f142 \202F \f142";*/
     color: white;
     padding-right: 8px;
 }
@@ -100,8 +123,8 @@ table tr:nth-of-type(4) td textarea {
 }
 
 #control_div {
-text-align:center;
-margin:auto;
+    text-align:center;
+    margin:auto;
 }
 
 #groupem_button {
@@ -120,6 +143,6 @@ margin:auto;
 
 #groupem_button:hover{
     background-color: #84FFFF;
-    text: black;
+    text-color:black;
 }
 
