added formatting changes to table-view-berk.html

--- a/src/table-view.css
+++ b/src/table-view.css
@@ -1,12 +1,5 @@
-body, html {
-  font: 28px Cabin;
-  width: 100%;
-  height: 100%;
-}
-
 /**
- * colors:
-   menu-background:;
+ * colors based on https://www.headspace.com/
    suggested-text; #AAB1C3; 
    empty-cell: #EFEDE7;
    selected-background:
@@ -18,7 +11,15 @@ body, html {
 * FOR HOVERS
 * color: #F39354;
 * background: #FED587;
- */
+*
+*/
+
+body, html {
+  font: 28px Cabin;
+  width: 100%;
+  height: 100%;
+}
+
 table {
     margin: auto;
     width: 60%;
@@ -195,5 +196,6 @@ input[type=text]:focus, textarea:focus {
   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
   padding: 3px 0px 3px 3px;
   margin: 5px 1px 3px 0px;
+  /*change this later*/
   border: 1px solid #FED587; 
 }
