--- a/src/table-view-berk.css
+++ b/src/table-view-berk.css
@@ -1,5 +1,6 @@
 body, html {
-  font: 28px Cabin;
+  font: 28px;
+  font-family: 'Raleway', sans-serif;
   width: 100%;
   height: 100%;
 }
@@ -18,7 +19,7 @@ table {
 }
 
 #classname_input {
-    font-size: 36px;
+    font: 36px Raleway;
     border-color: transparent;
     box-shadow: inset 0px 0px 0px 0px red;;
     font-weight: bold;
@@ -38,9 +39,6 @@ table td.student_name {
     width: 20%;
 }
 
-table td.delete_student {
-
-}
 
 table td {
     width: 38%;
@@ -50,6 +48,7 @@ table td {
     background: #EFEDE7;
     color: #00838F;
 }
+
 
 /*table headers*/
 table th {
@@ -71,14 +70,24 @@ table th:nth-of-type(4) {
 }
 
 table td.remove {
-    width: 4%;
+    width: 8%;
+    color: #4C5365;
     vertical-align: middle;
     text-align: center;
-    background: "black";
+    background: #F39354;
 }
 
 table td.remove:hover {
-    color: red;
+    color: #F39354;
+    background: #FED587;
+}
+
+table td.remove {
+    width: 8%;
+    color: #4C5365;
+    vertical-align: middle;
+    text-align: center;
+    background: #F39354;
 }
 
 table td.remove:before {
@@ -123,7 +132,7 @@ table td p span:hover {
 
 table td textarea {
     width: 100%;
-    font: 18px Cabin;
+    font: 18px Raleway;
 }
 
 /* Make the textarea larger when it's the only thing. */
@@ -141,7 +150,6 @@ table tr:nth-of-type(4) td textarea {
     height: 8ex;
 }
 
-
 #control_div {
     text-align:center;
     margin:auto;
@@ -153,8 +161,8 @@ table tr:nth-of-type(4) td textarea {
     bottom: 5%;
     height: 80px;
     width: 200px;
-    font: 28px Cabin;
-    background-color: #00838F;
+    font: 28px Raleway;
+    background-color: #4C5365;
     color: white;
     border-radius: 4px;
     border-width: 0px;
@@ -162,7 +170,27 @@ table tr:nth-of-type(4) td textarea {
 }
 
 #groupem_button:hover{
-    background-color: #84FFFF;
-    text-color:black;
+    background-color: #F39354;
+    color: #F39354;
+    background: #FED587;
+}
+
+input[type=text], textarea {
+  -webkit-transition: all 0.10s ease-in-out;
+  -moz-transition: all 0.10s ease-in-out;
+  -ms-transition: all 0.10s ease-in-out;
+  -o-transition: all 0.10s ease-in-out;
+  outline: none;
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px #EFEDE7;
+  /*/border: 1px solid #FED587*/*/
+}
+ 
+input[type=text]:focus, textarea:focus {
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid #4C5365; 
 }
 
