--- a/src/table-view-berk.css
+++ b/src/table-view-berk.css
@@ -26,7 +26,7 @@ table {
     align-content: center;
     text-align:center;
     color: #4C5365;
-      -webkit-transition: all 0.10s ease-in-out;
+    -webkit-transition: all 0.10s ease-in-out;
     -moz-transition: all 0.10s ease-in-out;
     -ms-transition: all 0.10s ease-in-out;
     -o-transition: all 0.10s ease-in-out;
@@ -169,25 +169,6 @@ table tr:nth-of-type(4) td textarea {
     margin:auto;
 }
 
-#groupem_button {
-    position: fixed;
-    text-align: center;
-    bottom: 5%;
-    height: 80px;
-    width: 200px;
-    font: 28px Raleway;
-    background-color: #4C5365;
-    color: white;
-    border-radius: 4px;
-    border-width: 0px;
-    pointer-events: all;
-}
-
-#groupem_button:hover{
-    background-color: #F39354;
-    color: #F39354;
-    background: #FED587;
-}
 
 input[type=text], textarea {
   -webkit-transition: all 0.10s ease-in-out;
@@ -208,3 +189,30 @@ input[type=text]:focus, textarea:focus {
   border: 1px solid #4C5365; 
 }
 
+
+#groupem_button {
+    position: fixed;
+    text-align: center;
+    bottom: 5%;
+    height: 80px;
+    width: 200px;
+    font: 28px Raleway;
+    background-color: #4C5365;
+    color: white;
+    border-radius: 4px;
+    border-width: 0px;
+    pointer-events: all;
+}
+
+#groupem_button:hover{
+    background-color: #F39354;
+    color: #F39354;
+    background: #FED587;
+}
+
+#groupem_button[disabled], groupem_button[disabled]:hover{
+    cursor:not-allowed;
+    opacity: 0.65;
+    background-color: #4C5365;
+    color: white;
+}
