--- a/src/group-view.css
+++ b/src/group-view.css
@@ -1,12 +1,13 @@
 html, body, body > svg, body > div {
  position: fixed;
  margin:0; padding:0; height:100%; width:100%; overflow:hidden;
+ font: 28px;
+ font-family: 'Raleway', sans-serif; 
 }
 
 /** 
  * colors based on https://www.headspace.com/
  */
-
  body > div {
    pointer-events: none;
  }
@@ -17,7 +18,7 @@ html, body, body > svg, body > div {
 
  svg g.node text{
   fill: white;
-  font-family: Cabin;
+  font-family: Raleway;
 }
 
 svg g.node circle {
@@ -43,29 +44,123 @@ svg line.breaking {
  visibility: hidden;
 }
 
-#control_div {
-  position: fixed;
-  text-align: center;
-  bottom: 0;
+
+/*shuffle button containers (for placement + sizing) */
+#control_container {
+    margin: auto;
+    vertical-align: bottom;
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    bottom: 0%;
+    left: 50%;
+    margin-bottom: 5%;
+    padding: 0px;
+    border: 0px;
 }
 
+#button_container {
+    display:inline-block;
+    vertical-align: middle;
+    height: 95%;
+}
+
+#group_size_container {
+    display:inline-block;
+    vertical-align: middle;
+    height: 95%;
+}
+
+#increment_container {
+    display: inline-block;
+    width: 30px;
+    height: 100%;
+    vertical-align: middle;
+}
+
+#increase_button_container {
+    display: block;
+    height: 45%;
+    padding-top: 10%;
+    padding-bottom: 5%;
+    vertical-align: top;
+}
+
+#decrease_button_container{
+    display: block;
+    height: 45%;
+    padding-bottom: 10%;
+    padding-top: 5%;
+    vertical-align: bottom;
+}
+
+/*shuffle button objects (for colors + behavior) */
 #shuffle_button {
-  position: fixed;
-  text-align: center;
-  bottom: 5%;
-  height: 80px;
-  width: 200px;
-  font: 28px Cabin;
-  background-color: #4C5365;
-  color: white;
-  border-radius: 4px;
-  border-width: 0px;
-  pointer-events: all;
+    text-align: center;
+    height: 100%;
+    width: 200px;
+    font: 28px Raleway;
+    background-color: #4C5365;
+    color: white;
+    border-radius: 5px;
+    border-width: 0px;
+    pointer-events: all;
 }
 
-#shuffle_button:hover{
-  background-color: #F39354;
-  color: #F39354;
-  background: #FED587;
+#shuffle_button:hover {
+    background-color: #F39354;
+    color: #F39354;
+    background: #FED587;
+}
+
+.control_button:focus, .control_button:active {
+    box-shadow: 0 0 5px #f9efec;
+    padding: 0px;
+    margin: 0px;
+    outline: none;
+}
+
+/*group_size*/
+#group_size_input {
+    -webkit-transition: all 0.10s ease-in-out;
+    -moz-transition: all 0.10s ease-in-out;
+    -ms-transition: all 0.10s ease-in-out;
+    -o-transition: all 0.10s ease-in-out;
+    display: block;
+    font: 32px Raleway;
+    text-align: center;
+    position:relative;
+    width: 80px;
+    border-radius: 5px;
+    height:90%;
+    bottom: 0%;
+    background-color: white;
+    border: 3px solid #BCBAB4;
+    color: #4C5365;
+    outline: none;
+}
+
+/*increments*/
+.increment_button {
+    display: block;
+    font-family: FontAwesome;
+    font-size: 20px;
+    border-radius: 5px;
+    background-color: #4C5365;
+    border-width: 0px;
+    border-color: white;
+    pointer-events: all;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+
+#increase_group_size:before {
+    content: '\f067';
+}
+
+#decrease_group_size:before {
+    content: '\f068';
 }
 
