--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -8,7 +8,7 @@ body{
   margin: 0;
   background: white; 
   color: #4C5365;
-  font-family: 'Cabin'; 
+  font-family: 'Raleway';
   /*background-image: url('../images/school.png');*/
 }
 
@@ -19,29 +19,48 @@ body{
   /*background-image: url('../images/school.png');*/
 }
 
-.sidebar{
+.sidebar {
   width: 10%;
   height: 100%;
   float: left;
   min-width: 200px;
   background: #4C5365; 
-  
 }
 
+/* Custom CSS Styles */
 #cssmenu {
   padding: 0;
   margin: 0;
   border: 0;
   line-height: 1;
   pointer-events: all; 
+  width: 200px;
+  background: #4C5365; 
+  font-family: 'Raleway';
+  zoom: 1;
+  font-size: 18px;
 }
-#cssmenu ul,
+
+#cssmenu:before {
+  content: '';
+  display: block;
+}
+
+#cssmenu:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+#cssmenu ul, 
 #cssmenu ul li,
 #cssmenu ul ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 200px;
 }
+
 #cssmenu ul {
   position: relative;
   z-index: 597;
@@ -67,7 +86,15 @@ body{
   left: 0px;
   z-index: 598;
   width: 100%;
+  top: 1px;
+  left: 99%;
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
+  width: 200px;
+  border: 1px solid #0082e7;
 }
+
 #cssmenu ul ul li {
   float: none;
 }
@@ -78,10 +105,6 @@ body{
 #cssmenu ul li:hover > ul {
   visibility: visible;
 }
-#cssmenu ul ul {
-  top: 1px;
-  left: 99%;
-}
 #cssmenu ul li {
   float: none;
 }
@@ -91,55 +114,31 @@ body{
 #cssmenu ul ul li {
   font-weight: normal;
 }
-/* Custom CSS Styles */
-#cssmenu {
-  width: 200px;
-  background: #333333;
-  font-family: 'Cabin', Tahoma, Arial, sans-serif;
-  zoom: 1;
-  font-size: 12px;
-}
-#cssmenu:before {
-  content: '';
-  display: block;
-}
-#cssmenu:after {
-  content: '';
-  display: table;
-  clear: both;
-}
+
 #cssmenu a {
   display: block;
   padding: 15px 20px;
-  color: #ffffff;
+  color: #4C5365;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
-#cssmenu > ul {
-  width: 200px;
-}
-#cssmenu ul ul {
-  width: 200px;
-}
+
 #cssmenu > ul > li > a {
-  border-right: 4px solid #00838F;
-  color: #ffffff;
+  border-right: 4px solid #4C5365;
+  color: white;
 }
 #cssmenu > ul > li > a:hover {
-  color: #ffffff;
+  background: #4C5365;
+  color: red;
 }
 #cssmenu > ul > li.active a {
-  /*background: #1b9bff;*/
-  /*background: #00BCD4; */
-  /*background: #0288D1;*/
-  /*background: #00838F;*/
-  background: #4C5365;  
+  background:  #6e7891;  
   color: white;
 }
 #cssmenu > ul > li a:hover,
 #cssmenu > ul > li:hover a {
   background: #FED587;  
-  color: red;
+  color: reblud;
 }
 #cssmenu li {
   position: relative;
@@ -162,14 +161,7 @@ body{
   border-radius: 0 0 3px 0;
   border-bottom: 0;
 }
-#cssmenu ul ul {
-  -webkit-border-radius: 0 3px 3px 0;
-  -moz-border-radius: 0 3px 3px 0;
-  border-radius: 0 3px 3px 0;
-}
-#cssmenu ul ul {
-  border: 1px solid #0082e7;
-}
+
 #cssmenu ul ul a {
   font-size: 12px;
   color: #ffffff;
@@ -184,10 +176,12 @@ body{
   background: #4eb1ff;
   color: #ffffff;
 }
+
 #cssmenu.align-right > ul > li > a {
   border-left: 4px solid #1b9bff;
   border-right: none;
 }
+
 #cssmenu.align-right {
   float: right;
 }
@@ -212,6 +206,7 @@ body{
   z-index: 598;
   width: 100%;
 }
+
 #cssmenu.align-right ul ul li.first {
   -webkit-border-radius: 3px 0 0 0;
   -moz-border-radius: 3px 0 0 0;
